# freedj-3000

./: .gitignore  AUDIO_ENGINE.md  CHANGELOG.md  Cargo.toml  PERFORMANCE.md  PLAN.md  README.md  rust-toolchain.toml  send-sync.sh
crates/analysis/: Cargo.toml
crates/analysis/src/: beat.rs  lib.rs  waveform.rs
crates/app/: Cargo.toml
crates/app/src/: audio.rs  main.rs  midi.rs  prodj.rs  renderer.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/decode/: Cargo.toml
crates/decode/src/: lib.rs  symphonia_decoder.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  loop_engine.rs  pipeline.rs  slip.rs  transport.rs
crates/link/: Cargo.toml
crates/link/src/: ableton.rs  lib.rs  prodj.rs
crates/minibpm-sys/: Cargo.toml  build.rs
crates/minibpm-sys/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/timecode/: Cargo.toml
crates/timecode/src/: lib.rs
crates/timestretch/: Cargo.toml  build.rs
crates/timestretch/src/: lib.rs  rubberband_sys.rs
crates/types/: Cargo.toml
crates/types/src/: beat.rs  cue.rs  engine.rs  lib.rs  media.rs  timecode.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  browser.rs  lib.rs  pads.rs  waveform.rs
tools/: send_beat.py
