[package]
name        = "opendeck-analysis"
description = "Beat grid detection and waveform pre-computation — offline and streaming"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opendeck-types = { workspace = true }
minibpm-sys    = { path = "../minibpm-sys" }
rustfft        = "6"
log            = { workspace = true }
