[package]
name        = "opendeck-app"
description = "OpenDeck — main binary"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opendeck"
path = "src/main.rs"

[dependencies]
opendeck-types    = { workspace = true }
opendeck-decode   = { workspace = true }
opendeck-analysis = { workspace = true }
cpal              = { workspace = true }
rtrb              = { workspace = true }
wgpu              = { workspace = true }
winit             = { workspace = true }
egui              = { workspace = true }
egui-wgpu         = { workspace = true }
egui-winit        = { workspace = true }
bytemuck          = { workspace = true }
pollster          = "0.3"
log               = { workspace = true }
env_logger        = { workspace = true }
anyhow            = { workspace = true }
midir             = { workspace = true }
hidapi            = { workspace = true }
