[package]
name        = "opendeck-timestretch"
description = "Resampler (no key-lock) and timestretcher (key-lock) pipeline stages"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opendeck-types = { workspace = true }
rubato         = { workspace = true }
# rubberband not yet available; will add when sys crate is published or vendored
# rubberband     = { workspace = true }
log            = { workspace = true }
