[package]
name        = "opendeck-timestretch"
description = "Resampler (no key-lock) and timestretcher (key-lock) pipeline stages"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
pkg-config = "0.3"

[dependencies]
opendeck-types = { workspace = true }
rubato         = { workspace = true }
log            = { workspace = true }
